// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order - LineItem desktop Should match snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <img
          alt="Product picture"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      />
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
        >
          <div>
            <p
              aria-label=""
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              data-mui-internal-clone-element="true"
            />
          </div>
        </div>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="part-number"
      />
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-number"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          $0.00
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          1 bx
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          1 bx
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.00
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
          data-testid="reorder-button"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Reorder
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot when cart is loading 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <img
          alt="2\\" PVC DWV 90D Elbow"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        Generic
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            data-testid="product-link"
            href="/product/generic-2-pvc-dwv-90d-elbow-pvc-300-2in/3613945"
          >
            <div>
              <p
                aria-label="2\\" PVC DWV 90D Elbow"
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              >
                2" PVC DWV 90D Elbow
              </p>
            </div>
          </a>
        </div>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-number"
      >
        MFR# PVC-300_2IN
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          $0.87
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          9 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          9 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          $7.81
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
          data-testid="reorder-button"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="MuiBox-root css-48y3p0"
          >
            <div
              class="MuiBox-root css-hyxlzm"
            >
              <span
                aria-valuenow="100"
                class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                role="progressbar"
                style="width: 16px; height: 16px; transform: rotate(-90deg);"
              >
                <svg
                  class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="19.5"
                    stroke-width="5"
                    style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                  />
                </svg>
              </span>
              <span
                class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yx9kzf-MuiCircularProgress-root"
                role="progressbar"
                style="width: 16px; height: 16px;"
              >
                <svg
                  class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="19.5"
                    stroke-width="5"
                  />
                </svg>
              </span>
            </div>
          </div>
          Reorder
        </button>
        <div
          class="MuiBox-root css-1ypvdwm"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-to-list-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
            >
              <svg>
                star-empty.svg
              </svg>
            </span>
            Add to List
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot when loading 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="width: 80px; height: 80px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 80px;"
        />
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        />
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 120px;"
        />
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="height: 24px;"
        />
        <div
          class="MuiBox-root css-1ypvdwm"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 100px; height: 24px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with comment line item 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <div
          class="MuiBox-root css-u55gld"
        >
          <svg>
            misc-charge.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiBox-root css-w7ibb4"
        >
          Comment
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-bwwkm5-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-kva2qw-MuiTypography-root"
        >
          PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-e6msfp-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.82
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ypvdwm"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-to-list-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
            >
              <svg>
                star-empty.svg
              </svg>
            </span>
            Add to List
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with comment line item that's nullish 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <div
          class="MuiBox-root css-u55gld"
        >
          <svg>
            misc-charge.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiBox-root css-w7ibb4"
        >
          Comment
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-bwwkm5-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-kva2qw-MuiTypography-root"
        >
          NULL
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-e6msfp-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.00
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1ypvdwm"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-to-list-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
            >
              <svg>
                star-empty.svg
              </svg>
            </span>
            Add to List
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with comment line item when loading 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="width: 80px; height: 80px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-bwwkm5-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-kva2qw-MuiTypography-root"
        >
          PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-e6msfp-MuiTypography-root"
          data-testid="order-price-total"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="height: 24px;"
        />
        <div
          class="MuiBox-root css-1ypvdwm"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 100px; height: 24px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with lineComment while on Mincron 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <img
          alt="2\\" PVC DWV 90D Elbow"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        Generic
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
        >
          <div>
            <p
              aria-label="2\\" PVC DWV 90D Elbow"
              class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
              data-mui-internal-clone-element="true"
            >
              2" PVC DWV 90D Elbow
            </p>
          </div>
        </div>
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="part-number"
      >
        Part# 30614
      </h6>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-number"
      >
        MFR# PVC-300_2IN
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          $0.87
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          9 ft
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          9 ft
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          $7.81
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
          data-testid="reorder-button"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Reorder
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-i6bazn"
      >
        <div
          aria-label="TEST 1234"
          class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-pad2pl-MuiGrid-root"
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1t2edxh-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1velx3e"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-64pe8k-MuiTypography-root"
            >
              Line Notes
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-15r2ssr-MuiGrid-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1hdqiad-MuiTypography-root"
              data-testid="order-line-comment"
            >
              TEST 1234
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with lineComment while on Mincron nad loading 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="width: 80px; height: 80px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        data-testid="mfr-name"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 80px;"
        />
      </h6>
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
        />
      </div>
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 120px;"
        />
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 30px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 50px;"
          />
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
          style="height: 24px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-i6bazn"
      >
        <div
          aria-label="TEST 1234"
          class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-pad2pl-MuiGrid-root"
          data-mui-internal-clone-element="true"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1t2edxh-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1velx3e"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-64pe8k-MuiTypography-root"
            >
              Line Notes
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-15r2ssr-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 900px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem desktop Should match snapshot with lineNumber 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    data-testid="row_123_line_1"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-13eans4"
      >
        <img
          alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
          class="MuiBox-root css-4w7ia0"
          data-testid="product-image"
          src="Product picture"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
    >
      <div
        class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
      >
        PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-5oy0h7-MuiTypography-root"
        data-testid="product-unavailable"
      >
        <svg
          class="MuiBox-root css-1ftav34"
          sx="[object Object]"
        >
          info.svg
        </svg>
        Item is no longer available
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-price"
        >
          $0.82
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-quantity"
        >
          1 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
          data-testid="order-ship-quantity"
        >
          1 ea
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
          data-testid="order-price-total"
        >
          $0.82
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
      >
        <button
          class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
          data-testid="reorder-button"
          disabled=""
          tabindex="-1"
          type="button"
        >
          Reorder
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <img
            alt="Product picture"
            class="MuiBox-root css-4w7ia0"
            data-testid="product-image"
            src="Product picture"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
              data-testid="product-link"
              href="/product/undefined-undefined-undefined/"
            >
              <div>
                <p
                  aria-label=""
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                />
              </div>
            </a>
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            $0.00
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            undefined ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            undefined ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            $0.00
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="reorder-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Reorder
          </button>
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-list-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
              >
                <svg>
                  star-empty.svg
                </svg>
              </span>
              Add to List
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot when cart is loading 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <img
            alt="2\\" PVC DWV 90D Elbow"
            class="MuiBox-root css-4w7ia0"
            data-testid="product-image"
            src="Product picture"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          Generic
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
              data-testid="product-link"
              href="/product/generic-2-pvc-dwv-90d-elbow-pvc-300-2in/3613945"
            >
              <div>
                <p
                  aria-label="2\\" PVC DWV 90D Elbow"
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  data-mui-internal-clone-element="true"
                >
                  2" PVC DWV 90D Elbow
                </p>
              </div>
            </a>
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        >
          MFR# PVC-300_2IN
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            $0.87
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            9 ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            9 ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            $7.81
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="reorder-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <div
              class="MuiBox-root css-48y3p0"
            >
              <div
                class="MuiBox-root css-hyxlzm"
              >
                <span
                  aria-valuenow="100"
                  class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 16px; height: 16px; transform: rotate(-90deg);"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                      style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yx9kzf-MuiCircularProgress-root"
                  role="progressbar"
                  style="width: 16px; height: 16px;"
                >
                  <svg
                    class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="19.5"
                      stroke-width="5"
                    />
                  </svg>
                </span>
              </div>
            </div>
            Reorder
          </button>
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-list-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
              >
                <svg>
                  star-empty.svg
                </svg>
              </span>
              Add to List
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot when erpPartNumber is null on Mincron 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <img
            alt="2\\" PVC DWV 90D Elbow"
            class="MuiBox-root css-4w7ia0"
            data-testid="product-image"
            src="Product picture"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          Generic
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          >
            <div>
              <p
                aria-label="2\\" PVC DWV 90D Elbow"
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              >
                2" PVC DWV 90D Elbow
              </p>
            </div>
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        />
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        >
          MFR# PVC-300_2IN
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            $0.87
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            9 ft
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            9 ft
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            $7.81
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="reorder-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Reorder
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot when loading 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="width: 80px; height: 80px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 80px;"
          />
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          />
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 120px;"
          />
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 50px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 30px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 30px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 50px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="height: 24px;"
          />
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 100px; height: 24px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with comment line item 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <div
            class="MuiBox-root css-u55gld"
          >
            <svg>
              misc-charge.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <span
            class="MuiBox-root css-w7ibb4"
          >
            Comment
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-8qatw7-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-9zl0j6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-1y7htps-MuiTypography-root"
            >
              $0.82
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-1d87j6q-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-list-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
              >
                <svg>
                  star-empty.svg
                </svg>
              </span>
              Add to List
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with comment line item that's nullish 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <div
            class="MuiBox-root css-u55gld"
          >
            <svg>
              misc-charge.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <span
            class="MuiBox-root css-w7ibb4"
          >
            Comment
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-8qatw7-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            NULL
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-9zl0j6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-1y7htps-MuiTypography-root"
            >
              $0.00
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-1d87j6q-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-list-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
              >
                <svg>
                  star-empty.svg
                </svg>
              </span>
              Add to List
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with comment line item when loading 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_null"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="width: 80px; height: 80px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-8qatw7-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
          >
            PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-9zl0j6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 50px;"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-1d87j6q-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="height: 24px;"
          />
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 100px; height: 24px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with lineComment while on Mincron 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <img
            alt="2\\" PVC DWV 90D Elbow"
            class="MuiBox-root css-4w7ia0"
            data-testid="product-image"
            src="Product picture"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          Generic
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
          >
            <div>
              <p
                aria-label="2\\" PVC DWV 90D Elbow"
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-mui-internal-clone-element="true"
              >
                2" PVC DWV 90D Elbow
              </p>
            </div>
          </div>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="part-number"
        >
          Part# 30614
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        >
          MFR# PVC-300_2IN
        </h6>
      </div>
    </div>
    <div
      aria-label="TEST 1234"
      class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-1d2crzf-MuiGrid-root"
      data-mui-internal-clone-element="true"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1t2edxh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1velx3e"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-64pe8k-MuiTypography-root"
        >
          Line Notes
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1622isx-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1hdqiad-MuiTypography-root"
          data-testid="order-line-comment"
        >
          TEST 1234
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            $0.87
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            9 ft
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            9 ft
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            $7.81
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="reorder-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Reorder
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with lineComment while on Mincron nad loading 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_3613945"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="width: 80px; height: 80px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-name"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 80px;"
          />
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          />
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
            style="width: 120px;"
          />
        </h6>
      </div>
    </div>
    <div
      aria-label="TEST 1234"
      class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-1d2crzf-MuiGrid-root"
      data-mui-internal-clone-element="true"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1t2edxh-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1velx3e"
        />
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-64pe8k-MuiTypography-root"
        >
          Line Notes
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1622isx-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="width: 30px;"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 50px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 30px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 30px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 50px;"
            />
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="height: 24px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - LineItem mobile Should match snapshot with lineNumber 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="row_123_line_1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-13eans4"
        >
          <img
            alt="PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755"
            class="MuiBox-root css-4w7ia0"
            data-testid="product-image"
            src="Product picture"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true css-opzdk6-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
        >
          PVC 2 DWV 1/8 ST BEND (PDWVS4K) Your # 000755
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
          data-testid="mfr-number"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Price
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Order Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
          >
            Ship Quantity
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-16kdk2k"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
            >
              Order Total
            </h6>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price"
          >
            $0.82
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-quantity"
          >
            1 ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-ship-quantity"
          >
            1 ea
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
            data-testid="order-price-total"
          >
            $0.82
          </h6>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-4k0dys-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
            data-testid="reorder-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Reorder
          </button>
          <div
            class="MuiBox-root css-1ypvdwm"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-list-button"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
              >
                <svg>
                  star-empty.svg
                </svg>
              </span>
              Add to List
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-5oy0h7-MuiTypography-root"
        data-testid="product-unavailable"
      >
        <svg
          class="MuiBox-root css-1ftav34"
          sx="[object Object]"
        >
          info.svg
        </svg>
        Item is no longer available
      </span>
    </div>
  </div>
</div>
`;
